--- a/.github/workflows/scanner.build-and-release.yml
+++ b/.github/workflows/scanner.build-and-release.yml
@@ -86,6 +86,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./scanner-app
-          file: {context}/docker/web.Dockerfile
+          file: ./scanner-app/docker/web.Dockerfile'
           push: true
           tags: ${{ secrets.DOCKER_REGISTRY_URL }}/loyalty-scanner-web:latest
