--- a/scanner-app/pubspec.yaml
+++ b/scanner-app/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
   qr_code_scanner: ^0.6.1
-  http: ^0.13.4
+  dio: ^4.0.4
+  dio_cookie_manager: ^2.0.0
   provider: ^6.0.1
   flutter_secure_storage: ^5.0.2
 
