--- a/loyalty-app/nginx.conf
+++ b/loyalty-app/nginx.conf
@@ -1,7 +1,15 @@
 server {
+  root   /usr/share/nginx/html;
   listen 80;
+
+  location /robots.txt {
+    if ($http_host ~* ".*\.myapp\.getloyalty\.app") {
+      return 200 "User-agent: *\nDisallow: /\n";
+    }
+    index robots.txt;
+  }
+
   location / {
-    root   /usr/share/nginx/html;
     index  index.html index.htm;
     try_files $uri $uri/ /index.html;
   }
