--- a/loyalty-app/Dockerfile
+++ b/loyalty-app/Dockerfile
@@ -31,16 +31,17 @@ ENV PUBLIC_URL $FRONTEND_URL
 ARG API_URL=${FRONTEND_URL}/api
 ENV REACT_APP_API_URL $API_URL
 
-ARG WEBSITE_NAME="Loyalty App"
+# If left intact, the init script will replace these with environment variables when the nginx container starts
+ARG WEBSITE_NAME="%REACT_APP_NAME%"
 ENV REACT_APP_NAME $WEBSITE_NAME
 
-ARG WEBSITE_DESCRIPTION="Loyalty customer app for the business"
+ARG WEBSITE_DESCRIPTION="%REACT_APP_DESCRIPTION%"
 ENV REACT_APP_DESCRIPTION $WEBSITE_DESCRIPTION
 
-ARG WEBSITE_KEYWORDS="loyalty app, business app, customer app"
+ARG WEBSITE_KEYWORDS="%REACT_APP_KEYWORDS%"
 ENV REACT_APP_KEYWORDS $WEBSITE_KEYWORDS
 
-ARG PUBLIC_VAPID_KEY="none"
+ARG PUBLIC_VAPID_KEY="%REACT_APP_PUBLIC_VAPID_KEY%"
 ENV REACT_APP_PUBLIC_VAPID_KEY $PUBLIC_VAPID_KEY
 
 
