--- a/panel/package.json
+++ b/panel/package.json
@@ -5,12 +5,18 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/pickers": "^3.3.10",
+    "@mui/icons-material": "^5.4.1",
+    "@mui/lab": "^5.0.0-alpha.68",
+    "@mui/material": "^5.4.1",
+    "@mui/styles": "^5.4.1",
     "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^10.4.9",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^10.4.0",
     "@toppev/getloyalty-campaigns": "^1.0.5",
     "@types/codemirror": "^5.60.5",
@@ -19,9 +25,9 @@
     "@types/lodash": "^4.14.178",
     "@types/node": "^12.20.37",
     "@types/qrcode.react": "^1.0.2",
-    "@types/react": "^16.14.21",
+    "@types/react": "^17.0.39",
     "@types/react-color": "^3.0.6",
-    "@types/react-dom": "^16.9.14",
+    "@types/react-dom": "^17.0.11",
     "@types/react-google-recaptcha": "^2.1.2",
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.19.2",
@@ -39,16 +45,16 @@
     "grapesjs-tui-image-editor": "^0.1.3",
     "js-cookie": "^2.2.1",
     "qrcode.react": "^1.0.0",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-chartjs-2": "^3.3.0",
     "react-codemirror2": "^7.2.1",
     "react-color": "^2.18.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
     "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^3.4.3",
-    "typescript": "^3.9.10"
+    "react-scripts": "^5.0.0",
+    "typescript": "^4.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
