--- a/.github/workflows/panel.ci-cd.yml
+++ b/.github/workflows/panel.ci-cd.yml
@@ -7,7 +7,7 @@ on:
   push:
     paths:
       - 'panel/**'
-      - '.github/workflows/panel.ci-cd.yaml'
+      - '.github/workflows/panel.ci-cd.yml'
 
 jobs:
   test:
